welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: ')' expected but ';' found.
 }else if (getCouleurSOl()==Color;green && estFaceMur()==true){
                                 ^SlugTracking:11: error: ';' expected but ')' found.
 }else if (getCouleurSOl()==Color;green && estFaceMur()==true){
                                                             ^